# Cold-Storage-Manager

./: .test.yaml  LICENSE  README.md  makefile  pyproject.toml  requirements.txt
.ci/: install-hooks.sh  pre-push.sh  quality-check.sh  run_ci.sh
cold_storage_manager/: __init__.py  cli.py  scanner.py
cold_storage_manager/data_structures/: bst.py  file_bst.py  file_min_heap.py  file_node.py
cold_storage_manager/test/: run-tests.py
cold_storage_manager/tests/: run_tests.py  test_example.py  test_file_min_heap.py  test_file_node.py  test_scanner.py
docs/: .gitignore  architecture.md
